[package]
name = "clerkcli"
description = "A CLI for Clerk"
license = "MIT"
version = "0.1.0"
edition = "2024"

[dependencies]
clerk-rs = "0.4"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tabled = "0.19"
tracing = "0.1"
tracing-subscriber = "0.3"
